# ewx

./: .coveralls.yml  .dir-locals.el  .gitignore  Makefile  Makefile.am  NOTES.org  README.org  client.el  configure.ac  ewb.el  ewc-test.el  ewc.el  ewl.el  ewp.xml  ews.c  manifest.scm  wayland.org
.github/workflows/: ci.yml  coverage.yml
contrib/: manifest.scm
elisp/: Eask  Makefile.am  ewc.el  ewl-test.el  ewl.el  ewx.el
ews/: Makefile.am  ews.c  ews_internal.h
tests/: Makefile.am  build.at  elisp.at  ews.at  package.m4  protocols.at  testsuite.at
tests/ews/: test_ews.c  test_ews_cmocka.c
